[gd_scene load_steps=5 format=3 uid="uid://d4clth6j3kqmv"]

[ext_resource type="Script" path="res://levels/0/game.gd" id="1_f1apm"]
[ext_resource type="PackedScene" uid="uid://t1346vl8kt37" path="res://scenes/whole_scene.tscn" id="1_qbfy5"]
[ext_resource type="PackedScene" uid="uid://cbefsipxb2dw8" path="res://characters/player.tscn" id="2_5gv5c"]
[ext_resource type="PackedScene" uid="uid://bupgftai44g6l" path="res://scenes/player_following_camera.tscn" id="3_wk7ex"]

[node name="Game" type="Node2D"]
script = ExtResource("1_f1apm")

[node name="WholeScene" parent="." node_paths=PackedStringArray("player_following_cam") instance=ExtResource("1_qbfy5")]
position = Vector2(0, -2160)
player_following_cam = NodePath("../PlayerFollowingCamera")

[node name="Player" parent="." instance=ExtResource("2_5gv5c")]
position = Vector2(16000, 760)
move_speed = 1500.0
jump_speed = 3000.0
acceleration_due_to_gravity = 2250.0
acceleration_due_to_air_resistance = 1500.0
max_jump_time = 0.25
can_fly = false
show_hp = false

[node name="PlayerFollowingCamera" parent="." node_paths=PackedStringArray("target") instance=ExtResource("3_wk7ex")]
position = Vector2(16000, 0)
target = NodePath("../Player")

[connection signal="castle_changed_scene" from="WholeScene" to="." method="_on_whole_scene_castle_changed_scene"]
[connection signal="dead" from="Player" to="." method="_on_player_dead"]
[connection signal="left_screen" from="Player" to="." method="_on_player_left_screen"]
